--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ django-cors-headers==4.7.0
 django-filter==25.1
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
 idna==3.10
+PyJWT==2.9.0
 requests==2.32.3
 sqlparse==0.5.3
 urllib3==2.3.0
